# acute

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/shaders/: default_vertex.glsl  simple_color.vert
assets/shaders/compiled/: default.frag.spv  default.vert.spv  none.frag.spv  none.vert.spv  simple_color.frag.spv  simple_color.vert.spv
book/: book.toml
crates/acute_app/: Cargo.toml
crates/acute_app/src/: app.rs  builder.rs  events.rs  lib.rs  plugin.rs  state.rs
crates/acute_assets/: Cargo.toml
crates/acute_assets/src/: asset_server.rs  assets.rs  lib.rs  types.rs
crates/acute_core/: Cargo.toml
crates/acute_core/src/: lib.rs
crates/acute_defaults/: Cargo.toml
crates/acute_defaults/src/: imports.rs  lib.rs
crates/acute_ecs/: Cargo.toml  README.md
crates/acute_ecs/examples/: change_detection.rs  events.rs  resources.rs
crates/acute_ecs/macros/: Cargo.toml
crates/acute_ecs/macros/src/: component.rs  fetch.rs  lib.rs
crates/acute_ecs/src/: bundle.rs  change_detection.rs  component.rs  event.rs  lib.rs
crates/acute_ecs/src/entity/: map_entities.rs  mod.rs
crates/acute_ecs/src/query/: access.rs  fetch.rs  filter.rs  mod.rs  state.rs
crates/acute_ecs/src/schedule/: executor.rs  executor_parallel.rs  graph_utils.rs  label.rs  mod.rs  stage.rs  system_descriptor.rs
crates/acute_ecs/src/storage/: blob_vec.rs  sparse_set.rs  table.rs
crates/acute_ecs/src/system/: exclusive_system.rs  function_system.rs  mod.rs  query.rs  system.rs  system_chaining.rs  system_param.rs
crates/acute_ecs/src/system/commands/: mod.rs
crates/acute_ecs/src/world/: entity_ref.rs  mod.rs
crates/acute_engine/: Cargo.toml
crates/acute_input/: Cargo.toml
crates/acute_input/src/: codes.rs  events.rs  input.rs  keyboard.rs  lib.rs  mouse.rs
crates/acute_macro_utils/: Cargo.toml
crates/acute_macro_utils/src/: lib.rs
crates/acute_math/: Cargo.toml
crates/acute_math/src/: lib.rs
crates/acute_ptr/: Cargo.toml  README.md
crates/acute_render/: Cargo.toml
crates/acute_render/src/: events.rs  lib.rs
crates/acute_render_backend/: Cargo.toml
crates/acute_render_backend/src/: buffer.rs  command_encoder.rs  lib.rs  mesh.rs  render_context.rs  render_pass.rs  renderer.rs  resources.rs  texture.rs
crates/acute_scenes/: Cargo.toml
crates/acute_scenes/src/: lib.rs  scene.rs
crates/acute_tasks/: Cargo.toml  README.md
crates/acute_tasks/examples/: busy_behavior.rs  idle_behavior.rs
crates/acute_tasks/src/: slice.rs
crates/acute_tasks/src/iter/: mod.rs
crates/acute_tracing/: Cargo.toml
crates/acute_tracing/src/: lib.rs
crates/acute_utils/: Cargo.toml
crates/acute_utils/src/: default.rs  label.rs  lib.rs
crates/acute_vulkan/: Cargo.toml
crates/acute_vulkan/examples/: triangle.rs
crates/acute_vulkan/src/: base.rs  debug.rs  driver.rs  gpu.rs  instance.rs  lib.rs  queues.rs  renderer.rs  settings.rs  surface.rs  utils.rs  vertex.rs
crates/acute_vulkan/src/driver/: adapter.rs  color.rs  command.rs  debug.rs  device.rs  error.rs  instance.rs  queue.rs  surface.rs  sync.rs  utils.rs
crates/acute_vulkan/src/driver/types/: device.rs  image.rs  mod.rs  pipeline.rs
crates/acute_wgpu/: Cargo.toml
crates/acute_wgpu/src/: context.rs  encoder.rs  lib.rs  render_context.rs  render_graph.rs  renderer.rs  resource_context.rs  resources.rs
crates/acute_window/: Cargo.toml
crates/acute_window/src/: events.rs  lib.rs  window.rs  windows.rs  winit_window.rs
crates/acute_winit/: Cargo.toml
crates/acute_winit/src/: convert.rs  lib.rs  window.rs
examples/: basic.rs  testing.rs
old/: Cargo.toml  acute.rs  main.rs  utils.rs  window.rs
old/components/: geometry.rs  mod.rs
old/graphics/: mod.rs  pipeline.rs  renderer.rs
old/src/: acute.rs  lib.rs
old/src/components/: default.rs  material.rs  mesh.rs
old/src/graphics/: buffer.rs  pipeline.rs  renderer.rs  resources.rs  texture.rs  types.rs
old/src/scenes/: mod.rs
old/src/tools/: camera.rs
old/tools/: uniforms.rs
src/: acute.rs  application.rs  defaults.rs  lib.rs  main.rs  prelude.rs  testing.rs  utils.rs  window.rs
src/components/: default.rs  geometry.rs  material.rs  mesh.rs  mod.rs  simple.rs
src/graphics/: buffer.rs  mod.rs  pipeline.rs  renderer.rs  resources.rs  texture.rs  types.rs
src/scenes/: mod.rs
src/state/: traits.rs
src/state/states/: chaotic_state.rs  mod.rs  none_sate.rs  state_ids.rs  test_state.rs
src/tests/: create_window.rs  mod.rs
src/tools/: camera.rs  uniforms.rs
tools/: compilespv.py  crates.py  format.py  name_reserve.py  publish.py
