[package]
name = "acute"
version = "0.0.2"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "Modular Data Driven Physics and Render Engine for the rust programming language."
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]
categories = ["game-engines", "graphics", "gui", "rendering", "science"]
exclude = ["old/"]

[lib]
name = "acute"
path = "src/lib.rs"

[dependencies]
acute_core = { version = "*", path = "crates/acute_core" }
acute_app = { version = "*", path = "crates/acute_app" }
acute_ecs = { version = "*", path = "crates/acute_ecs" }
acute_render = { version = "*", path = "crates/acute_render" }
acute_render_backend = { version = "*", path = "crates/acute_render_backend" }
acute_input = { version = "*", path = "crates/acute_input" }
acute_scenes = { version = "*", path = "crates/acute_scenes" }
acute_window = { version = "*", path = "crates/acute_window" }
acute_assets = { version = "*", path = "crates/acute_assets" }

[[example]]
name = "testing"
path = "examples/testing.rs"