[package]
name = "acute"
version = "0.0.2"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "Modular Data Driven Physics and Render Engine for the rust programming language."
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]
categories = ["game-engines", "graphics", "gui", "rendering", "science"]
exclude = ["old/"]

[lib]
name = "acute"
path = "src/lib.rs"

[workspace]
members = ["crates/*"]
exclude = ["crates/acute_wgpu"]

[dependencies]
acute_defaults = { version = "0.1", path = "crates/acute_defaults" }

[dev-dependencies]
legion = "0.4.0"

[[example]]
name = "testing"
path = "examples/testing.rs"