[package]
name = "acute"
version = "0.0.1"
authors = ["Sebastian Strobl <Sebastian@Strobl.net>"]
edition = "2018"

# this is not a real "bin" it's just for testing purposes!
[[bin]]
name = "main"
path = "old/main.rs"

[[bin]]
name = "refactor"
path = "src/refactor_main.rs"

[lib]
name = "acute"
path = "old/lib.rs"

[dependencies]
acute_core = { version = "0.1.0", path = "crates/acute_core" }
acute_app = { version = "0.1.0", path = "crates/acute_app" }
acute_ecs = { version = "0.1.0", path = "crates/acute_ecs" }
acute_render = { version = "0.1.0", path = "crates/acute_render" }
acute_render_backend = { version = "0.1.0", path = "crates/acute_render_backend" }
acute_input = { version = "0.1.0", path = "crates/acute_input" }
acute_scenes = { version = "0.1.0", path = "crates/acute_scenes" }
acute_window = { version = "0.1.0", path = "crates/acute_window" }
acute_assets = { version = "0.1.0", path = "crates/acute_assets" }

winit = "0.22.2"
winit_input_helper = "0.7.0"
wgpu = { version = "0.5.0", features = ["vulkan"] }
futures = "0.3.5"
serde = { version = "1.0.111", features = ["derive"] }
bytemuck = "1.2.0"
image = "0.23.5"
ultraviolet = "0.4.6"
legion = "0.2.4"
rusty_timer = "1.0.2"
log = "0.4"
fern = "0.5"
# as this package is deprecated, an alternative must be found!
glsl-to-spirv = "0.1.7"