[package]
name = "acute_app"
version = "0.1.3"
authors = ["Sebatsian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "app sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

[dependencies]
acute_scenes = { version = "0.1", path = "../acute_scenes" }
acute_ecs = { version = "0.1", path = "../acute_ecs" }
legion = "0.4.0" # 178 / 186
futures = "0.3.5"