[package]
name = "acute_app"
version = "0.1.3"
authors = ["Sebatsian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "app sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

[dependencies]
bevy_ecs = "0.8.0"
futures = "0.3.5"