[package]
name = "acute_assets"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "asset sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
notify = "5.0.0-pre.4"
uuid = "0.8.1"
image = "0.23.12"