[package]
name = "acute_core"
version = "0.1.1"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "core sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acute_ecs = { version = "0.1", path = "../acute_ecs" }
rusty_timer = "1.0.3"