[package]
name = "acute_ecs"
version = "0.1.0"
edition = "2021"
description = "Acute's Engine's entity component system [FORKED FROM acute, AND WILL BE REPLACED/MODIFIED IN THE FUTURE]"
homepage = "https://acuteengine.org"
repository = "https://github.com/acuteengine/acute"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]

[dependencies]
acute_ptr = { path = "../acute_ptr", version = "0.1" }
acute_tasks = { path = "../acute_tasks", version = "0.1" }
acute_utils = { path = "../acute_utils", version = "0.1" }
acute_ecs_macros = { path = "macros", version = "0.1" }

async-channel = "1.4"
fixedbitset = "0.4"
fxhash = "0.2"
downcast-rs = "1.2"
serde = "1"

[dev-dependencies]
rand = "0.8"