[package]
name = "acute_input"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
license = "Apache 2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
