[package]
name = "acute_input"
version = "0.1.2"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "input sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acute_ecs = { version = "0.1", path = "../acute_ecs" }
acute_app = { version = "0.1", path = "../acute_app" }