[package]
name = "acute_render"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"
description = "render sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acute_app = { version = "0.1", path = "../acute_app" }
acute_ecs = { version = "0.1", path = "../acute_ecs" }
acute_window = { version = "0.1", path = "../acute_window" }