[package]
name = "acute_render_backend"
version = "0.1.2"
authors = ["Sebatsian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "render-backend sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4", "serde"] }
acute_ecs = { version = "0.1", path = "../acute_ecs" }
acute_window = { version = "0.1", path = "../acute_window" }

wgpu = "0.6.0"
bytemuck = "1.4.1"