[package]
name = "acute_tasks"
version = "0.1.0"
edition = "2021"
description = "A task executor for Acute ECS [FORKED FROM acute, AND WILL BE REPLACED/MODIFIED IN THE FUTURE]"
license = "MIT OR Apache-2.0"

[dependencies]
futures-lite = "1.4.0"
event-listener = "2.5.2"
async-executor = "1.3.0"
async-channel = "1.4.2"
num_cpus = "1.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
