[package]
name = "acute_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.8.0"
acute_app = { version = "0.1", path = "../acute_app" }

tracing = "0.1.34"
tracing-subscriber = "0.3.11"