[package]
name = "acute_utils"
version = "0.1.0"
edition = "2021"
description = "A collection of utils for Acute Engine [FORK FORM acute, WILL BE RPLACED / MODIFIED IN THE FUTURE]"
homepage = "https://acuteengine.org"
repository = "https://github.com/acuteengine/acute"
license = "MIT OR Apache-2.0"
keywords = ["acute"]

[dependencies]
tracing = "0.1.34"
ahash = "0.7.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
hashbrown = { version = "0.11", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2.0", features = ["js"]}
uuid = { version = "0.8", features = ["wasm-bindgen"] }
