[package]
name = "acute_wgpu"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

[dependencies]
acute_app = { version = "0.1", path = "../acute_app" }
acute_window = { version = "0.1", path = "../acute_window" }
acute_winit = { version = "0.1", path = "../acute_winit" }
acute_ecs = { version = "0.1", path = "../acute_ecs" }
legion = "0.4.0"
wgpu = "0.7.0"
shaderc = "0.7.2"
parking_lot = "0.11.0"
futures = "0.3.13"