[package]
name = "acute_window"
version = "0.1.1"
authors = ["Sebatsian Strobl <Sebastian@Strobl.net>"]
edition = "2018"
description = "window sub-crate of acute"
license = "Apache-2.0"
repository = "https://github.com/tryworks/acute"
keywords = ["acute"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acute_app = { version = "0.1", path = "../acute_app" }
bevy_ecs = "0.8.0"
acute_tracing = { version = "0.1", path = "../acute_tracing" }
uuid = "1.1.2"