[package]
name = "acute_winit"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acute_window = {version = "0.1", path = "../acute_window" }
acute_app = { version = "0.1", path = "../acute_app" }
acute_input = { version = "0.1", path = "../acute_input" }
bevy_ecs = "0.8.0"
acute_tracing = { version = "0.1", path = "../acute_tracing" }
winit = "0.23.0"